massive improvements to transform sinks

--- a/test/Storage.Net.Tests.Integration/Storage.Net.Tests.Integration.csproj
+++ b/test/Storage.Net.Tests.Integration/Storage.Net.Tests.Integration.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
    <PropertyGroup>
-      <TargetFrameworks>netcoreapp2.1</TargetFrameworks>
+      <TargetFramework>netcoreapp3.1</TargetFramework>
       <LangVersion>latest</LangVersion>
       <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
       <WarningsAsErrors />
    </PropertyGroup>
 
    <ItemGroup>
-      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
       <PackageReference Include="Shouldly" Version="3.0.2" />
       <PackageReference Include="xunit" Version="2.4.1" />
       <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
@@ -17,8 +17,8 @@
       </PackageReference>
       <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
       <PackageReference Include="LogMagic" Version="2.17.5" />
-      <PackageReference Include="Config.Net" Version="4.13.7" />
-      <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+      <PackageReference Include="Config.Net" Version="4.14.16" />
+      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
    </ItemGroup>
 
   <ItemGroup>
