--- a/src/Storage.Net/Storage.Net.csproj
+++ b/src/Storage.Net/Storage.Net.csproj
@@ -3,7 +3,7 @@
       <Copyright>Copyright (c) 2015-2017 by Ivan Gavryliuk</Copyright>
       <AssemblyTitle>Storage.Net</AssemblyTitle>
       <Authors>Ivan Gavryliuk (@aloneguid)</Authors>
-      <TargetFrameworks>netstandard1.6;netstandard2.0;netstandard2.1</TargetFrameworks>
+      <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
       <GenerateDocumentationFile>true</GenerateDocumentationFile>
       <AssemblyName>Storage.Net</AssemblyName>
       <PackageId>Storage.Net</PackageId>
@@ -23,19 +23,16 @@
    <PropertyGroup Condition="'$(Configuration)' == 'Release'">
       <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
    </PropertyGroup>
-   <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard1.6'">
-      <DefineConstants>NET16</DefineConstants>
-   </PropertyGroup>
    <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
      <DefineConstants>JSON</DefineConstants>
    </PropertyGroup>
+   <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
+      <DefineConstants>JSON</DefineConstants>
+   </PropertyGroup>
    <ItemGroup>
+      <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="1.3.2" />
       <PackageReference Include="NetBox" Version="2.3.5" />
       <PackageReference Include="System.Threading.Thread" Version="4.3.0" />
-   </ItemGroup>
-   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-     <PackageReference Include="System.Text.Json">
-       <Version>4.6.0</Version>
-     </PackageReference>
+      <PackageReference Include="System.Text.Json" Version="4.7.0"/>
    </ItemGroup>
 </Project>
