--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -187,11 +187,11 @@ stages:
               publishFeedCredentials: 'nuget.org (aloneguid)'
           - task: GitHubRelease@1
             inputs:
-               gitHubConnection: 'aloneguid'
-               repositoryName: 'aloneguid/storage'
-               action: 'create'
-               target: '$(Build.SourceVersion)'
-               tagSource: 'userSpecifiedTag'
-               tag: '$(Build.BuildNumber)'
-               changeLogCompareToRelease: 'lastFullRelease'
-               changeLogType: 'commitBased'
+              gitHubConnection: 'aloneguid'
+              repositoryName: 'aloneguid/storage'
+              action: 'create'
+              target: '$(Build.SourceVersion)'
+              tagSource: 'userSpecifiedTag'
+              tag: '$(Build.BuildNumber)'
+              changeLogCompareToRelease: 'lastFullRelease'
+              changeLogType: 'issueBased'
