--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,8 @@ variables:
     value: 'ubuntu-16.04'  # see https://docs.microsoft.com/en-us/azure/devops/pipelines/agents/hosted?view=azure-devops&tabs=yaml&viewFallbackFrom=vsts
   - name: rgName
     value: 'storagenet-deleteme'
+  - name: v
+    value: '9.2.4'
 
 stages:
 - stage: Build
@@ -36,32 +38,21 @@ stages:
 
     steps:
 
-    - task: petersendev.dotnet-global-tool-installer.DotnetGlobalToolInstaller.DotnetGlobalToolInstaller@0
-      displayName: 'install housework'
-      inputs:
-        name: housework
-
-    - script: 'housework author src/*.csproj -s build.ini -r'
-      displayName: 'author projects'
-
-    - script: 'housework setbuildnumber %Version% -s build.ini'
-      displayName: 'set build number'
-
-    - script: 'housework pushvars Version -s build.ini'
-      displayName: 'push variables'
+    - script: echo "##vso[build.updatebuildnumber]$(v.prefix)"
 
     - task: DotNetCoreCLI@2
       displayName: 'build all'
       inputs:
         projects: src/storage.sln
-        arguments: '-c release'
+        arguments: '-c release /p:Version=$(v)'
 
     - task: DotNetCoreCLI@2
       displayName: 'Unit Tests'
       continueOnError: true
       inputs:
-        command: test
-        projects: test/Storage.Net.Tests/Storage.Net.Tests.csproj
+        command: 'test'
+        projects: 'test/Storage.Net.Tests/Storage.Net.Tests.csproj'
+        arguments: '/p:Version=$(v)'
 
     - task: CopyFiles@2
       displayName: 'copy generated nugets'
