--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,7 +46,7 @@ stages:
       inputs:
         command: 'test'
         projects: 'test/Storage.Net.Tests/Storage.Net.Tests.csproj'
-        arguments: '-c release /p:Version=$(v)'
+        arguments: '-c release /p:Version=$(v) /p:PackageLicenseUrl="https://github.com/aloneguid/storage/blob/master/LICENSE"'
 
     - task: DotNetCoreCLI@2
       displayName: 'build all'
