--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,7 @@ variables:
   - name: rgName
     value: 'storagenet-deleteme'
   - name: v
-    value: '9.2.6'
+    value: '9.3.0'
 
 stages:
 - stage: Build
@@ -66,7 +66,7 @@ stages:
 
     # we don't care if tests in other stages are not successful, we want to public this to internal testing
     - task: NuGetCommand@2
-      condition: "eq(variables['Build.SourceBranch'], 'refs/heads/develop')"
+      condition: "eq(variables['Build.SourceBranch'], 'refs/heads/databricks')"
       displayName: 'push to internal feed'
       continueOnError: true
       inputs:
