--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,9 @@ variables:
   - name: rgName
     value: 'storagenet-deleteme'
   - name: v
-    value: '9.3.1'
+    value: '9.3.3'
+  - name: pv
+    value: 9.3.3-alpha-01
 
 stages:
 - stage: Build
@@ -39,7 +41,7 @@ stages:
 
     steps:
 
-    - script: echo "##vso[build.updatebuildnumber]$(v)"
+    - script: echo "##vso[build.updatebuildnumber]$(pv)"
 
     - task: DotNetCoreCLI@2
       displayName: 'Unit Tests'
@@ -47,7 +49,7 @@ stages:
       inputs:
         command: 'test'
         projects: 'test/Storage.Net.Tests/Storage.Net.Tests.csproj'
-        arguments: '-c release /p:Version=$(v) /p:FileVersion=$(v) /p:PackageLicenseUrl="https://github.com/aloneguid/storage/blob/master/LICENSE" /p:Authors="Ivan Gavryliuk (@aloneguid)" /p:PackageIconUrl="http://i.isolineltd.com/nuget/storage.png"'
+        arguments: '-c release /p:Version=$(pv) /p:FileVersion=$(v) /p:PackageLicenseUrl="https://github.com/aloneguid/storage/blob/master/LICENSE" /p:Authors="Ivan Gavryliuk (@aloneguid)" /p:PackageIconUrl="http://i.isolineltd.com/nuget/storage.png"'
 
     - task: DotNetCoreCLI@2
       displayName: 'build all'
