--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,9 +28,11 @@ variables:
   - name: rgName
     value: 'storagenet-deleteme'
   - name: v
-    value: '9.3.3'
+    value: '9.3.4'
+  - name: av
+    value: '9.0.0'
   - name: pv
-    value: 9.3.3-alpha-01
+    value: '9.3.4-alpha-01'
 
 stages:
 - stage: Build
@@ -49,13 +51,13 @@ stages:
       inputs:
         command: 'test'
         projects: 'test/Storage.Net.Tests/Storage.Net.Tests.csproj'
-        arguments: '-c release /p:Version=$(pv) /p:FileVersion=$(v) /p:PackageLicenseUrl="https://github.com/aloneguid/storage/blob/master/LICENSE" /p:Authors="Ivan Gavryliuk (@aloneguid)" /p:PackageIconUrl="http://i.isolineltd.com/nuget/storage.png"'
+        arguments: '-c release /p:Version=$(pv) /p:FileVersion=$(v) /p:AssemblyVersion=$(av) /p:PackageLicenseUrl="https://github.com/aloneguid/storage/blob/master/LICENSE" /p:Authors="Ivan Gavryliuk (@aloneguid)" /p:PackageIconUrl="http://i.isolineltd.com/nuget/storage.png"'
 
     - task: DotNetCoreCLI@2
       displayName: 'build all'
       inputs:
         projects: src/storage.sln
-        arguments: '-c release /p:Version=$(pv)'
+        arguments: '-c release /p:Version=$(pv) /p:FileVersion=$(v) /p:AssemblyVersion=$(av) /p:PackageLicenseUrl="https://github.com/aloneguid/storage/blob/master/LICENSE" /p:Authors="Ivan Gavryliuk (@aloneguid)" /p:PackageIconUrl="http://i.isolineltd.com/nuget/storage.png"'
 
     - task: CopyFiles@2
       displayName: 'copy generated nugets'
