push internal feed packages from "develop" branch

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,7 +70,7 @@ stages:
 
     # we don't care if tests in other stages are not successful, we want to public this to internal testing
     - task: NuGetCommand@2
-      condition: "eq(variables['Build.SourceBranch'], 'refs/heads/databricks')"
+      condition: "eq(variables['Build.SourceBranch'], 'refs/heads/develop')"
       displayName: 'push to internal feed'
       continueOnError: true
       inputs:
