--- a/FluentStorage.Azure.DataLake.Store/FluentStorage.Azure.DataLake.csproj
+++ b/FluentStorage.Azure.DataLake.Store/FluentStorage.Azure.DataLake.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
    <PropertyGroup>
-      <TargetFramework>netstandard2.0</TargetFramework>
-      <PackageId>FluentStorage.Azure.Storage.Blobs</PackageId>
-      <RootNamespace>FluentStorage.Azure.Storage.Blobs</RootNamespace>
-      <AssemblyName>FluentStorage.Azure.Storage.Blobs</AssemblyName>
-      <Description>Support for Azure blob storage.</Description>
+      <TargetFrameworks>netstandard2.0;netstandard2.1;net50;net60</TargetFrameworks>
+      <PackageLicense>https://github.com/aloneguid/storage/blob/master/LICENSE</PackageLicense>
+      <Description>Provides Azure Data Lake Store integration for FluentStorage library. Supports only ADLS Gen 1. To use Gen 2, use FluentStorage.Azure.Blobs package.</Description>
+      <PackageId>FluentStorage.Azure.DataLake</PackageId>
+      <AssemblyName>FluentStorage.Azure.DataLake</AssemblyName>
+      <RootNamespace>FluentStorage.Azure.DataLake</RootNamespace>
       <Copyright>Copyright (c) 2023 Robin Rodricks and FluentStorage Contributors</Copyright>
       <GenerateDocumentationFile>true</GenerateDocumentationFile>
       <PackageIcon>logo-nuget.png</PackageIcon>
@@ -18,20 +18,18 @@
       <LangVersion>latest</LangVersion>
       <SignAssembly>True</SignAssembly>
       <AssemblyOriginatorKeyFile>..\FluentStorage\sn.snk</AssemblyOriginatorKeyFile>
-      <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\FluentStorage.Azure.Storage.Blobs.xml</DocumentationFile>
+      <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\FluentStorage.Azure.DataLake.xml</DocumentationFile>
    </PropertyGroup>
-
    <PropertyGroup Condition="'$(Configuration)' == 'Release'">
       <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
    </PropertyGroup>
-
-
    <ItemGroup>
-      <PackageReference Include="Azure.Identity" Version="1.1.0" />
-      <PackageReference Include="Azure.Storage.Blobs" Version="12.10.0" />
-      <PackageReference Include="System.Text.Json" Version="4.7.0" />
+      <PackageReference Include="Microsoft.Azure.DataLake.Store" Version="1.1.19" />
+      <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.3.1" />
+      <PackageReference Include="Microsoft.Rest.ClientRuntime.Azure.Authentication" Version="2.4.0" />
+      <PackageReference Include="NetBox" Version="2.3.5" />
+      <PackageReference Include="System.Net.Http" Version="4.3.4" />
    </ItemGroup>
-
    <ItemGroup>
       <ProjectReference Include="..\FluentStorage\FluentStorage.csproj" />
    </ItemGroup>
