--- a/FluentStorage.Azure.KeyVault/FluentStorage.Azure.KeyVault.csproj
+++ b/FluentStorage.Azure.KeyVault/FluentStorage.Azure.KeyVault.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
    <PropertyGroup>
       <TargetFrameworks>netstandard2.0;netstandard2.1;net50;net60</TargetFrameworks>
-      <Description>Extension to FluentStorage providing integration with Microsoft Azure Key vault as a blob storage.</Description>
+      <Description>Extension to FluentStorage providing integration with Azure Key vault as blob storage.</Description>
       <FileVersion>1.0.0.0</FileVersion>
       <AssemblyVersion>1.0.0.0</AssemblyVersion>
       <PackageLicense>https://github.com/aloneguid/storage/blob/master/LICENSE</PackageLicense>
