--- a/FluentStorage.Azure.Queues/FluentStorage.Azure.Queues.csproj
+++ b/FluentStorage.Azure.Queues/FluentStorage.Azure.Queues.csproj
@@ -1,8 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
    <PropertyGroup>
-      <TargetFramework>netstandard2.0</TargetFramework>
+      <TargetFrameworks>netstandard2.0;netstandard2.1;net50;net60</TargetFrameworks>
       <AssemblyName>FluentStorage.Azure.Queues</AssemblyName>
+      <Description>Extension to FluentStorage providing Azure Queue Storage as messaging storage.</Description>
       <Copyright>Copyright (c) 2023 Robin Rodricks and FluentStorage Contributors</Copyright>
       <GenerateDocumentationFile>true</GenerateDocumentationFile>
       <PackageIcon>logo-nuget.png</PackageIcon>
