--- a/FluentStorage.Azure.EventHub/FluentStorage.Azure.EventHub.csproj
+++ b/FluentStorage.Azure.EventHub/FluentStorage.Azure.EventHub.csproj
@@ -4,7 +4,7 @@
       <AssemblyTitle>FluentStorage.Azure.EventHub</AssemblyTitle>
       <PackageId>FluentStorage.Azure.EventHub</PackageId>
       <PackageLicense>https://github.com/aloneguid/storage/blob/master/LICENSE</PackageLicense>
-      <Description>Extension to FluentStorage providing integration with Microsoft Azure Storage for blobs, tables and queues.</Description>
+      <Description>Extension to FluentStorage providing Azure EventHub blob storage.</Description>
       <AssemblyName>FluentStorage.Azure.EventHub</AssemblyName>
       <RootNamespace>FluentStorage.Azure.EventHub</RootNamespace>
       <Copyright>Copyright (c) 2023 Robin Rodricks and FluentStorage Contributors</Copyright>
