--- a/FluentStorage.SFTP/FluentStorage.SFTP.csproj
+++ b/FluentStorage.SFTP/FluentStorage.SFTP.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
    <PropertyGroup>
-      <TargetFramework>netstandard2.0</TargetFramework>
-      <Description>SFTP bindings for FluentStorage</Description>
+      <TargetFrameworks>netstandard2.0;netstandard2.1;net50;net60</TargetFrameworks>
+      <Description>Extension to FluentStorage providing SFTP support using SSH.NET.</Description>
       <PackageId>FluentStorage.SFTP</PackageId>
       <AssemblyName>FluentStorage.SFTP</AssemblyName>
       <RootNamespace>FluentStorage.SFTP</RootNamespace>
