chore(deps): update `xunit` dependencies
Update `xunit` to `2.4.2`
Update `xunit.runner.visualstudio` to `2.4.5`

--- a/FluentStorage.Tests/FluentStorage.Tests.csproj
+++ b/FluentStorage.Tests/FluentStorage.Tests.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net60</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>FluentStorage.Tests</AssemblyName>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
@@ -14,13 +14,8 @@
     <PackageReference Include="Config.Net" Version="4.14.20" />
     <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
+    <PackageReference Include="xunit" Version="2.4.2" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
