--- a/FluentStorage.Tests.Integration/FluentStorage.Tests.Integration.csproj
+++ b/FluentStorage.Tests.Integration/FluentStorage.Tests.Integration.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
    <PropertyGroup>
-      <TargetFramework>net60</TargetFramework>
+      <TargetFramework>net6.0</TargetFramework>
       <LangVersion>latest</LangVersion>
    </PropertyGroup>
 
@@ -14,7 +14,10 @@
       <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
       <PackageReference Include="LogMagic" Version="2.17.5" />
       <PackageReference Include="Config.Net" Version="4.14.20" />
-      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+      <PackageReference Include="Testcontainers" Version="3.2.0" />
+      <PackageReference Include="Bogus" Version="34.0.2" />
+      <PackageReference Include="FluentAssertions" Version="6.11.0" />
+      
    </ItemGroup>
 
   <ItemGroup>
@@ -31,6 +34,10 @@
     <ProjectReference Include="..\FluentStorage.FTP\FluentStorage.FTP.csproj" />
     <ProjectReference Include="..\FluentStorage.GCP\FluentStorage.GCP.csproj" />
     <ProjectReference Include="..\FluentStorage\FluentStorage.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Blobs\" />
   </ItemGroup>
 
 </Project>
