--- a/FluentStorage/FluentStorage.csproj
+++ b/FluentStorage/FluentStorage.csproj
@@ -9,7 +9,7 @@
       <GenerateDocumentationFile>true</GenerateDocumentationFile>
       <PackageIcon>logo-nuget.png</PackageIcon>
       <Authors>Robin Rodricks, Ivan Gavryliuk, FluentStorage Contributors</Authors>
-      <Version>5.1.0</Version>
+      <Version>5.2.0</Version>
       <PackageProjectUrl>https://github.com/robinrodricks/FluentStorage</PackageProjectUrl>
       <RepositoryUrl>https://github.com/robinrodricks/FluentStorage</RepositoryUrl>
       <RepositoryType>GitHub</RepositoryType>
@@ -30,7 +30,7 @@
    </PropertyGroup>
    <ItemGroup>
       <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="1.3.2" />
-      <PackageReference Include="NetBox" Version="2.3.5" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="System.Threading.Thread" Version="4.3.0" />
       <PackageReference Include="System.Text.Json" Version="4.7.0" />
    </ItemGroup>
