Encryption changes Addition of AesSymmetricEncryptionSink and WithAesSymmetricEncryption extensionObsolesence of SymmetricEncryptionSink and WithSymmetricEncryption extension Updaated Tests Blob/Stream file tests and XUnit FileDataAttribute to support tests

--- a/FluentStorage.Tests/FluentStorage.Tests.csproj
+++ b/FluentStorage.Tests/FluentStorage.Tests.csproj
@@ -16,5 +16,13 @@
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="TestFiles\d0d829444b1bee11a299005056370622.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestFiles\e4124b764c1bee11a299005056370622.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
 </Project>
