--- a/FluentStorage.Azure.ServiceBus/FluentStorage.Azure.ServiceBus.csproj
+++ b/FluentStorage.Azure.ServiceBus/FluentStorage.Azure.ServiceBus.csproj
@@ -12,8 +12,8 @@
       <Copyright>Copyright (c) 2023 Robin Rodricks and FluentStorage Contributors</Copyright>
       <GenerateDocumentationFile>true</GenerateDocumentationFile>
       <PackageIcon>logo-nuget.png</PackageIcon>
-      <Authors>Robin Rodricks, Ivan Gavryliuk, FluentStorage Contributors</Authors>
-      <Version>5.2.1</Version>
+      <Authors>Robin Rodricks, Ivan Gavryliuk, Giampaolo Gabba, FluentStorage Contributors</Authors>
+      <Version>6.0.0</Version>
       <PackageProjectUrl>https://github.com/robinrodricks/FluentStorage</PackageProjectUrl>
       <RepositoryUrl>https://github.com/robinrodricks/FluentStorage</RepositoryUrl>
       <RepositoryType>GitHub</RepositoryType>
